# skripsipaicode

./: CNAME  README.md  index.html  skripsiguide.md
paicode/: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  setup.cfg
paicode/paicode/: __init__.py  agent.py  cli.py  config.py  fs.py  llm.py  ui.py  workspace.py
presentation/: README.md  index.html  slide01_cover.html  slide02_agenda.html  slide03_latar_belakang.html  slide04_rumusan_masalah.html  slide05_tujuan.html  slide06_tinjauan_pustaka.html  slide07_arsitektur_8step.html  slide07_arsitektur_single_shot.html  slide08_komponen_sistem.html  slide09_fitur_utama.html  slide1.html  slide10_path_security.html  slide11_implementasi.html  slide12_demo.html  slide13_hasil_evaluasi.html  slide14_kesimpulan.html  slide15_saran.html  slide16_penutup.html  slide2.html  slide3.html
reference/: APA_Citations.md  template_text.txt
skripsi_latex/: .gitignore  Makefile  apalike-id.bst  bab1_pendahuluan.tex  bab2_tinjauan_pustaka.tex  bab3_metodologi.tex  bab4_implementasi_hasil.tex  bab5_kesimpulan_saran.tex  back_lampiran.tex  daftar_pustaka.bib  front_cover.tex  front_daftar_istilah.tex  front_daftar_simbol.tex  front_daftar_singkatan.tex  front_halaman_judul.tex  front_kata_pengantar.tex  front_motto_persembahan.tex  front_pengesahan.tex  front_pernyataan.tex  front_persetujuan.tex  front_ucapan_terima_kasih.tex  lampiran_a.tex  main.tex
